--- a/index.html
+++ b/index.html
@@ -1,34 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Social links profile</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+    <link rel="stylesheet" href="styles.css">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+    <title>Frontend Mentor | Social links profile</title>
 </head>
 <body>
+<div class="container">
+    <div class="card">
+        <img class="profile-pic" src="assets/images/avatar-jessica.jpeg" alt="profile picture">
+        <div class="title">
+            <h1 class="text-preset-1">Jessica Randall</h1>
+            <p class="text-preset-2-bold green">London, United Kingdom</p>
+        </div>
+        <p class="text-preset-2">"Front-end developer and avid reader."</p>
+        <div class="links">
+            <button class="btn btn-link">GitHub</button>
+            <button class="btn btn-link">Frontend Mentor</button>
+            <button class="btn btn-link" >LinkedIn</button>
+            <button class="btn btn-link">Twitter</button>
+            <button class="btn btn-link">Instagram</button>
+        </div>
+    </div>
+</div>
 
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
 
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+<div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">kayvaldo</a>.
+</div>
 </body>
 </html>
