--- a/index.html
+++ b/index.html
@@ -11,28 +11,28 @@
     <title>Frontend Mentor | Social links profile</title>
 </head>
 <body>
-<div class="container">
-    <div class="card">
+<main class="container">
+    <section class="card">
         <img class="profile-pic" src="assets/images/avatar-jessica.jpeg" alt="profile picture">
-        <div class="title">
+        <section class="title">
             <h1 class="text-preset-1">Jessica Randall</h1>
             <p class="text-preset-2-bold green">London, United Kingdom</p>
-        </div>
+        </section>
         <p class="text-preset-2">"Front-end developer and avid reader."</p>
-        <div class="links">
+        <section class="links">
             <button class="btn btn-link">GitHub</button>
             <button class="btn btn-link">Frontend Mentor</button>
             <button class="btn btn-link" >LinkedIn</button>
             <button class="btn btn-link">Twitter</button>
             <button class="btn btn-link">Instagram</button>
-        </div>
-    </div>
-</div>
+        </section>
+    </section>
+</main>
 
 
-<div class="attribution">
+<footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">kayvaldo</a>.
-</div>
+</footer>
 </body>
 </html>
