Refactored button text style

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         </section>
         <p class="text-preset-2">"Front-end developer and avid reader."</p>
         <section class="links">
-            <button class="btn btn-link">GitHub</button>
-            <button class="btn btn-link">Frontend Mentor</button>
-            <button class="btn btn-link" >LinkedIn</button>
-            <button class="btn btn-link">Twitter</button>
-            <button class="btn btn-link">Instagram</button>
+            <button class="btn btn-link text-preset-2-bold">GitHub</button>
+            <button class="btn btn-link text-preset-2-bold">Frontend Mentor</button>
+            <button class="btn btn-link text-preset-2-bold" >LinkedIn</button>
+            <button class="btn btn-link text-preset-2-bold">Twitter</button>
+            <button class="btn btn-link text-preset-2-bold">Instagram</button>
         </section>
     </section>
 </main>
